Initial working uncatchable throwables.